# rag_basics

./: 1_RAG_with_own_text.ipynb  2_RAG_PDF.ipynb  3_RAG_Local_Persist.ipynb  4_RAG_Add_Docs.ipynb  README.md  main.py  pyproject.toml  requirements.txt
Vector/: chroma.sqlite3
