[project]
name = "rag-basics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.8",
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.2.0",
    "sentence-transformers>=5.4.1",
]
